# estorebackend

./: .env  Cargo.toml
.cargo/: config.toml
prisma/: schema.prisama  schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240725122329_init/: migration.sql
prisma/migrations/20240801052801_updated/: migration.sql
src/: main.rs  prisma.rs  utils.rs
src/admin/: handler.rs  model.rs  routes.rs
src/admin/handler/: category.rs  mod.rs  order.rs  product.rs  sales.rs  user.rs
src/auth/: handler.rs  mod.rs  model.rs  routes.rs  utils.rs
src/client/: handler.rs  model.rs  routes.rs
src/general/: handler.rs  routes.rs
