[package]
name = "estorebackend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "prisma-cli",      
]

[dependencies]
uuid = "1.0"
bcrypt = "0.12"
jsonwebtoken = "8.0"
tokio = { version = "1.17.0" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
postgres = "0.19"
dotenv = "0.15"
serde = "1.0.204"
serde_json = "1.0"
actix-web = "4"